:ambulance: fix more actions is cropped on mobile cause step content without description is too small and fix form container large don't take all screen height

--- a/inertia/assets/css/components/_form-container.scss
+++ b/inertia/assets/css/components/_form-container.scss
@@ -38,6 +38,7 @@
     @media screen and (max-width: 767px) {
       padding: 18px 18px 48px;
       max-width: 100%;
+      max-height: initial;
       border-radius: 0;
       box-shadow: none;
 
